--- a/solve/task-2/src/app/app.module.scss
+++ b/solve/task-2/src/app/app.module.scss
@@ -11,30 +11,51 @@
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(3, 1fr);
 	gap: 15px;
+}
 
-	.item {
+.item {
+	cursor: pointer;
+	position: relative;
+	width: 100%;
+	// border-radius: 50%;
+
+	.image {
+		height: 100%;
 		width: 100%;
-		cursor: pointer;
+		object-fit: cover;
 		border: 5px solid darkgray;
-		// border-radius: 50%;
 		box-sizing: border-box;
 		transition: all 0.2s ease;
-
-		img {
-			height: 100%;
-			width: 100%;
-			object-fit: cover;
-		}
-
-		&:nth-child(4n + 1) {
-			border-color: red;
-		}
 
 		&:hover {
 			border-color: yellow;
 			transform: rotate(45deg);
 		}
 	}
+
+	.cross {
+		position: absolute;
+		right: 15px;
+		bottom: 15px;
+		width: 10px;
+		height: 10px;
+		background-color: white;
+		padding: 5px;
+		border-radius: 50%;
+	}
+
+	&:nth-child(4n + 1) {
+		img {
+			border-color: red;
+		}
+	}
+}
+
+.controls {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
 }
 
 @media (max-width: 900px) {
