--- a/solve/task-2/src/app/app.module.scss
+++ b/solve/task-2/src/app/app.module.scss
@@ -51,6 +51,17 @@
 	}
 }
 
+.header {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	margin-top: 10px;
+
+	p {
+		font-size: 14px;
+	}
+}
+
 .controls {
 	display: flex;
 	align-items: center;
